# CobotImport3D

./: 3D渲染与场景交互接口设计.md  README.md  RobotPTE.sln  pyproject.toml  script.csx  start.py  复杂几何处理方案.md  整体UI UX设计理念.md  机械手通讯插件接口定义与规划文档.md  机械臂3D路径规划与控制软件 - 需求与设计文档.md  简单数据结构.md  长广溪机械臂C# SDK API列表 v2.20c.xlsx
CorePlatform/: DataStructures.cs  Interfaces.cs
Plugin.IO/: IOPlugin.cs
Plugin.RobotCommunicator/: RobotCommunicatorPlugin.cs
Plugin.Sample/: Plugin.Sample.csproj  SamplePlugin.cs
RobotPTE.UI/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  ModelImporter.cs  PathManager.cs  PluginManager.cs  Program.cs  RobotPTE.UI.csproj  ScriptingManager.cs  app.manifest
ScriptingHost/: Class1.cs  ScriptingHost.cs  ScriptingHost.csproj
src/cobot_importer/: __init__.py  app.py
src/cobot_importer/core/: __init__.py  model_loader.py  project.py  serialization.py
src/cobot_importer/plugins/: __init__.py  base.py  builtin.py  loader.py
src/cobot_importer/simulation/: __init__.py  player.py
src/cobot_importer/ui/: __init__.py  main_window.py  path_detail.py  path_manager.py  scene_view.py
tests/: test_serialization.py
